Updated HTML content

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
   <div class="section">
     <h2>Summary</h2>
-    <p>I am a student currently pursuing my MCA at GNIMS. Passionate about technology, I am building skills in programming and web development.</p>
+    <p>I am a student currently pursuing my MCA at GNIMS. Passionate about technology, currently Developing skills in programming.</p>
   </div>
 
   <div class="section">
